# vector-editor-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tests/: test_commands.py
vector_editor/: cli.py  commands.py  main.py  repository.py  shape_factories.py
vector_editor/shapes/: __init__.py  base.py  circle.py  point.py  segment.py  square.py
